bug fixes and add bbands indicator computation

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -29,6 +29,7 @@
           <option value="SMA">SMA</option>
           <option value="EMA">EMA</option>
           <option value="RSI">RSI</option>
+          <option value="BBANDS">BBANDS</option>
         </select>
         <select name="field">
           <option value="open">open</option>
