--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -8,8 +8,8 @@
     <form action="{{url_for('check')}}" method="post">
       Instrument:
       <select name="instrument" id="instrument" required>
-        <option value="nifty">nifty</option>
-        <option value="reliance">reliance</option>
+        <option value="Nifty">nifty</option>
+        <option value="Reliance">reliance</option>
       </select>
       <br />
       Timeframe:
